Book model update, test and documentation
