# library-back/src/Model/Book.Model.js
@@ -1,11 +1,15 @@
 const mongoose = require("mongoose");
 
 const NewBook = mongoose.Schema({
-    book_name: {type: String},
-    book_author: {type: String},
-    book_id: {type: Number},
-    book_pages_number: {type: Number},
-    book_category: [String],
+    title: { type: String },
+    subtitle: { type: String },
+    author: { type: String },
+    published: { type: Date },
+    publisher: { type: String },
+    pages: { type: Number },
+    description: { type: String },
+    website: { type: String },
+    category: [String],
 })
 
 module.exports = mongoose.model("Book", NewBook);
